--- a/style.css
+++ b/style.css
@@ -41,7 +41,7 @@ font-family: 'JetBrains Mono', monospace;
     font-family: 'Raleway', sans-serif;
     font-size: 1.375rem; /* 22px */
     font-style: normal;
-    font-weight: 900;
+    font-weight: 900; /* black */
     letter-spacing: -0.020em;  /* adobe xd's unit is 1/1000em */
 }
 
@@ -50,7 +50,15 @@ h2 {
     font-family: 'Raleway', sans-serif;
     font-size: 3.625rem; /* 58px */
     font-style: normal;
-    font-weight: 900;
+    font-weight: 900; /* black */
+    letter-spacing: -0.020em;  /* adobe xd's unit is 1/1000em */
+    line-height: 1.030; /* 58px */
+}
+h3 {
+    font-family: 'Raleway', sans-serif;
+    font-size: 2rem; /* 32px */
+    font-style: normal;
+    font-weight: 900; /* black */
     letter-spacing: -0.020em;  /* adobe xd's unit is 1/1000em */
     line-height: 1.030; /* 58px */
 }
@@ -64,17 +72,23 @@ p {
     font-family: 'Raleway', sans-serif;
     font-size: 1.250rem; /* 20px */
     font-style: normal;
-    font-weight: 500;
+    font-weight: 500; /* medium */
     letter-spacing: 0.000em;  /* adobe xd's unit is 1/1000em */
     line-height: 1.800; /* 36px */
 }
+p > a,
+p > a:link,
+p > a:visited { color: white; }
+p > a:hover   { opacity: 0.8; }
+p > a:active  { opacity: 0.6; }
+
 p + p { margin-top: 0.5em /* 10px */ }
 
 p.caption-text {
     font-family: 'Raleway', sans-serif;
     font-size: 1rem; /* 16px */
     font-style: normal;
-    font-weight: 500;
+    font-weight: 500; /* medium */
     letter-spacing: 0.000em;  /* adobe xd's unit is 1/1000em */
     line-height: 1.750; /* 28px */
 }
@@ -128,14 +142,62 @@ orange:  rgb(248, 191, 50)
 
 /* Responsive Grid
 ––––––––––––––––––––––––––––––––––––––––––––––––––
-Normal column is max 1000px wide
+Not so much a 'responsive grid' - just a simple column that's 
+padded to be either 1000px wide or 86% of the viewport, whichever is smaller.
+
+1162px * 86% = 999.32
+1163px * 86% = 1000.17
 */
+
+/* todo: recalculate below based on 10vw */
+:root { --grid-padding: 7vw; }
+@media ( min-width: 1163px ) {
+    :root { --grid-padding: calc( (100vw - 1000px) / 2 ); }
+}
 
 section.full-width-column {
     position: relative;
-    padding-left: 10%;
-    padding-right: 10%;
+    padding-left:  var( --grid-padding );
+    padding-right: var( --grid-padding );
 }
+
+/* If I had to stick to a 'grid' I'd have 4 columns, with 20px gutter 
+
+   at 1000px wide, three columns would be:
+   ((1000px - 3 x gutter) / 4 * 3 + 2 * gutter) pixels wide 
+   = 940 / 4 * 3 + 40 = 235 * 3 + 40 = 745px
+   866px * 86% = 744.76
+   867px * 86% = 745.62
+
+   at 1000px wide, two columns would be:
+   ((1000px - 3 x gutter) / 4 * 2 + 1 * gutter) pixels wide 
+   = 940 / 4 * 2 + 40 = 235 * 2 + 20 = 490px
+   569px * 86% = 489.34
+   570px * 86% = 490.20
+
+   */
+:root {
+    --three-columns-padding: 7vw;
+    --two-columns-padding:   7vw;
+}
+
+@media ( min-width: 867px ) {
+    :root { --three-columns-padding: calc( (100vw - 745px) / 2 ); }
+}
+section.three-column-width {
+    position: relative;
+    padding-left:  var( --three-columns-padding );
+    padding-right: var( --three-columns-padding );
+}
+@media ( min-width: 570px ) {
+    :root { --two-columns-padding: calc( (100vw - 490px) / 2 ); }
+}
+section.two-column-width {
+    position: relative;
+    padding-left:  var( --two-columns-padding );
+    padding-right: var( --two-columns-padding );
+}
+
 
 /* Header
 –––––––––––––––––––––––––––––––––––––––––––––––––– 
@@ -147,9 +209,9 @@ header {
     display: flex;
     flex-flow: row nowrap;
     justify-content: space-between;
-    margin-left: 10%; /* todo: fix to responsive margins */ 
-    margin-right: 10%; /* todo: fix to responsive margins */
-    padding: 32px 0;
+    margin-left:  var( --grid-padding );  
+    margin-right: var( --grid-padding ); 
+    padding: 2rem 0;
 }
 header > div:last-child {
     align-items: center;
@@ -157,56 +219,106 @@ header > div:last-child {
     flex-flow: row nowrap;
     justify-content: space-between;
 }
-header > div:last-child > div {
-    margin-right: 20px;
+header > div:last-child > a {
+    margin-right: 1.25rem;
 }
-header > div:last-child > div:last-child {
+header > div:last-child > a:last-child {
     margin-right: 0;
 }
 
-/* Misc
-–––––––––––––––––––––––––––––––––––––––––––––––––– 
-*/
-.max-60-wide { max-width: 60%; }
-.max-600px-wide { max-width: 600px; }
-.max-625px-wide { max-width: 625px; }
-.code-block {
-    width: 525px;
-    height: 245px;
-    margin: 0 auto;
-    background-color: rgba(36,50,56,1.0);
-    border-radius: 5px;
+header a,
+header a:link,
+header a:visited {
+    text-decoration: none;
+    color: rgba(0,0,0,0.5);
+    fill: rgba(0,0,0,0.5);
+}
+header a:hover {
+    color: rgba(0,0,0,0.65);
+    fill: rgba(0,0,0,0.65);
+}
+header a:active {
+
 }
 
-section.bowed-shape-section:before {
-    content: "";
-    background-color: red;
-    height: 150px;
-    position: absolute;
-    top: -150px;
-    width: 100%;
-    left: 0;
-    z-index: -100;
-    display: block;
-}
+header a.scale-on-hover,
+header a.scale-on-hover:link,
+header a.scale-on-hover:visited { transition: transform 0.1s ease-in-out; }
+header a.scale-on-hover:hover   { transform: scale(1.1); }
+header a.scale-on-hover:active  { transform: scale(1.0); }
+
+
+
 
 /* Recent Work Carousel
 –––––––––––––––––––––––––––––––––––––––––––––––––– 
 */
 .recent-work-carousel {
-    align-items: flex-start;
     display: flex;
+    align-items: flex-start;
     flex-flow: row nowrap;
     justify-content: space-between;
+
+    overflow-y: scroll; /* these two lines give the scrolling momentum on ios */
+    -webkit-overflow-scrolling: touch;
+    scroll-behavior: smooth;
+    scroll-snap-type: x mandatory;
+
     width: 100%;
-}
-.recent-work-carousel > div {
     height: max-content;
-    position: relative;
-    transition: transform 0.1s ease-in-out;
-    /* four columns with 20px gutter */
-    width: calc((100% - 20px * 3) / 4);
 }
+
+/* Hide scrollbar for Chrome, Safari and Opera */
+.recent-work-carousel::-webkit-scrollbar { display: none; }
+/* Hide scrollbar for IE, Edge and Firefox */
+.recent-work-carousel {
+    -ms-overflow-style: none;  /* IE and Edge */
+    scrollbar-width: none;  /* Firefox */
+}
+
+.recent-work-carousel > div {
+    flex-shrink: 0;
+    height: 100%;
+    overflow: hidden;
+    scroll-snap-align: start;    
+    width: 100%;
+    margin-right: 10px;
+}
+.recent-work-carousel > div:last-child { margin: 0; }
+/* from iphone 6 up, show two columns 10px gutter */
+@media ( min-width: 375px ) {
+    .recent-work-carousel > div {
+        width: calc((100% - 10px) / 2);
+        margin-right: 10px;
+    }
+    .recent-work-carousel > div:last-child { margin: 0; }
+}
+/* from iphone 6+ up, show two columns 20px gutter */
+@media ( min-width: 375px ) {
+    .recent-work-carousel > div {
+        width: calc((100% - 20px) / 2);
+        margin-right: 20px;
+    }
+    .recent-work-carousel > div:last-child { margin: 0; }
+}
+/* from ipad 768px up, show three columns 20px gutter */
+@media ( min-width: 768px ) {
+    .recent-work-carousel > div {
+        width: calc((100% - 40px) / 3);
+        margin-right: 20px;
+    }
+    .recent-work-carousel > div:last-child { margin: 0; }
+}
+/* from ipad pro 1024px up, show four columns 20px gutter */
+@media ( min-width: 1024px ) {
+    .recent-work-carousel > div {
+        width: calc((100% - 60px) / 4);
+        margin-right: 20px;
+    }
+    .recent-work-carousel > div:last-child { margin: 0; }
+}
+
+
 .recent-work-carousel > div > img {
     border-radius: 3px;
     display: block;
@@ -214,7 +326,6 @@ section.bowed-shape-section:before {
     width: 100%;
 }
 .recent-work-carousel > div:hover {
-    transform: scale(1.03);
 }
 .recent-work-carousel > div:hover > img {
     opacity: 0.55;
@@ -226,22 +337,23 @@ section.bowed-shape-section:before {
 This carousel is only 3 columns wide on desktop.
 */
 .older-work-carousel {
-
     display: flex;
-    overflow-y: scroll; /* these two lines give the scrolling momentum on ios */
-    -webkit-overflow-scrolling: touch;
-    scroll-behavior: smooth;
     align-items: stretch;
-
     flex-flow: row nowrap;
     justify-content: space-between;
 
-    width: calc((100% - 20px) - (100% - 60px) / 4);
+    overflow-y: scroll; /* these two lines give the scrolling momentum on ios */
+    -webkit-overflow-scrolling: touch;
+    scroll-behavior: smooth;
+    scroll-snap-type: x mandatory;
+
+    width: 100%;
     /* todo: fix proportional height here */
     height: 350px;
     margin: 0 auto;
     border: 1px solid red;
 }
+
 /* Hide scrollbar for Chrome, Safari and Opera */
 .older-work-carousel::-webkit-scrollbar { display: none; }
 /* Hide scrollbar for IE, Edge and Firefox */
@@ -251,11 +363,12 @@ This carousel is only 3 columns wide on desktop.
 }
 
 .older-work-carousel > div {
+    border: 1px solid cyan;
     flex-shrink: 0;
     height: 100%;
-    width: 100%;
     overflow: hidden;
-    border: 1px solid cyan;
+    scroll-snap-align: center;    
+    width: 100%;
 }
 .older-work-carousel > div > img {
     border-radius: 3px;
@@ -267,7 +380,173 @@ This carousel is only 3 columns wide on desktop.
 }
 
 
-/* Misc
+/* Modals
+–––––––––––––––––––––––––––––––––––––––––––––––––– 
+*/
+.modal {
+    position: fixed;
+    width: 100vw;
+    height: 100vh;
+    background: rgba(0,0,0,0.4);
+    top: 0;
+    left: 0;
+    background-blend-mode: multiply;
+    backdrop-filter: blur(25px);
+    overflow-y: auto;
+    padding-top: 3rem;
+    display: none;
+}
+.modal h3,
+.modal p {
+    padding-left: 10%;
+    padding-right: 10%;
+}
+.modal img {
+    border-radius: 0.5rem;
+    width: 80%;
+    margin: 0 auto;
+    display: block;
+    box-shadow: 0px 10px 25px 5px rgb(0,0,0,0.75);
+    margin-bottom: 3rem;
+}
+.modal .close {
+    position: fixed;
+    width: 2rem;
+    height: 2rem;
+    top: 5vw;
+    right: 5vw;
+    transform: translate(50%, -50%);
+    border-radius: 100%;
+    border: 1px solid white;
+
+    background-clip: border-box; 
+    background-color: transparent;
+    background-image: url('data:image/svg+xml;utf8,<svg xmlns="http://www.w3.org/2000/svg" preserveAspectRatio="none" viewBox="0 0 29.243 29.243"><line id="Line_3" data-name="Line 3" y1="25" x2="25" transform="translate(2.121 2.121)" fill="none" stroke="white" stroke-linecap="round" stroke-width="3"/><line id="Line_4" data-name="Line 4" x1="25" y1="25" transform="translate(2.121 2.121)" fill="none" stroke="white" stroke-linecap="round" stroke-width="3"/></svg>');
+    background-origin: border-box;
+    background-position: center center;
+    background-repeat: no-repeat;
+    background-size: 50%;
+
+    cursor: pointer;
+    transition: background-color 0.1s ease-in-out;
+}
+.modal .close:hover { background-color: rgba(255, 255, 255, 0.5); }
+
+/* Button
+–––––––––––––––––––––––––––––––––––––––––––––––––– 
+*/
+a.button,
+a.button:link,
+a.button:visited {
+    display: block;
+    width: max-content;
+    font-family: 'Raleway', sans-serif;
+    font-size: 1.125rem; /* 18px */
+    font-style: normal;
+    font-weight: 600; /* semi-bold */
+    letter-spacing: 0.000em;  /* adobe xd's unit is 1/1000em */
+    line-height: 1.000; /* 18px */
+    padding: 0.9em 2em;
+    text-decoration: none;
+    border-radius: 2em;
+    white-space: nowrap;
+}
+
+a.button.purple        { background-color: rgba( 134, 76, 239, 1.0 ); color: white; }
+a.button.purple:hover  { background-color: rgba( 134, 76, 239, 0.7 ); }
+a.button.purple:active { background-color: rgba( 134, 76, 239, 1.0 ); }
+
+/* Footer
+–––––––––––––––––––––––––––––––––––––––––––––––––– 
+*/
+footer *:not(script) { display: block; } /* avoid line-height issues */
+
+footer {
+    padding-left:  var( --grid-padding );  
+    padding-right: var( --grid-padding ); 
+    background-color: rgba(230,233,240,1.0);
+}
+
+footer > div:first-child {
+    display: flex;
+    flex-flow: row nowrap;
+    align-items: flex-end;
+    justify-content: space-between;
+}
+footer > div:last-child {
+    display: flex;
+    flex-flow: row nowrap;
+    align-items: flex-end;
+    justify-content: space-between;
+}
+
+footer a,
+footer a:link,
+footer a:visited { color: rgba(0,0,0,0.6); fill: rgba(0,0,0,0.6); }
+footer a:hover   { color: rgba(0,0,0,0.8); fill: rgba(0,0,0,0.8); }
+footer a:active  { color: rgba(0,0,0,0.6); fill: rgba(0,0,0,0.8); }
+footer a { text-decoration: none; }
+
+footer a.scale-on-hover,
+footer a.scale-on-hover:link,
+footer a.scale-on-hover:visited { transition: transform 0.1s ease-in-out; }
+footer a.scale-on-hover:hover   { transform: scale(1.1); }
+footer a.scale-on-hover:active  { transform: scale(1.0); }
+
+footer .site-map-flex {
+    display: flex;
+    flex-flow: column nowrap;
+    align-items: flex-start;
+    height: max-content;
+    width: max-content;
+    justify-content: space-between;
+}
+footer .site-map-flex a { margin-bottom: 1.125rem; /* 18px */ }
+footer .site-map-flex a:last-child { margin-bottom: 0; }
+
+footer .site-map-flex a,
+footer .site-map-flex a:link,
+footer .site-map-flex a:visited {
+    font-family: 'Raleway', sans-serif;
+    font-size: 0.937rem; /* 15px */
+    font-style: normal;
+    font-weight: 500; /* medium */
+    letter-spacing: 0.000em;  /* adobe xd's unit is 1/1000em */
+    line-height: 1.000; /* 36px */
+}
+footer .site-map-flex a:hover  { font-weight: 600; }
+footer .site-map-flex a:active { font-weight: 600; }
+
+
+footer > hr {
+    border: none;
+    border-top: 1px solid rgba(0,0,0,0.3);
+    margin: 1.562rem 0; /* 25px */
+    width: 100%;
+}
+
+footer .contact-flex {
+    display: flex;
+    flex-flow: row nowrap;
+    align-items: center;
+    width: max-content;
+    height: max-content;
+    justify-content: space-between;
+}
+footer .contact-flex a { margin-right: 1.3rem; }
+footer .contact-flex a:last-child { margin-right: 0; }
+
+footer .copyright {
+    font-family: 'Raleway', sans-serif;
+    font-size: 1rem; /* 16px */
+    font-style: normal;
+    font-weight: 500; /* medium */
+    letter-spacing: 0.000em;  /* adobe xd's unit is 1/1000em */
+    line-height: 1.750; /* 28px */
+    color: rgba(0,0,0,0.6);
+}
+
+/* Spacing Utilities
 –––––––––––––––––––––––––––––––––––––––––––––––––– 
 */
 .pt-1  { padding-top: 0.5em }
@@ -292,17 +571,6 @@ This carousel is only 3 columns wide on desktop.
 .pb-9  { padding-bottom: 4.5em }
 .pb-10 { padding-bottom: 5.0em }
 
-.py-1  { padding-top: 0.5em; padding-bottom: 0.5em }
-.py-2  { padding-top: 1.0em; padding-bottom: 1.0em }
-.py-3  { padding-top: 1.5em; padding-bottom: 1.5em }
-.py-4  { padding-top: 2.0em; padding-bottom: 2.0em }
-.py-5  { padding-top: 2.5em; padding-bottom: 2.5em }
-.py-6  { padding-top: 3.0em; padding-bottom: 3.0em }
-.py-7  { padding-top: 3.5em; padding-bottom: 3.5em }
-.py-8  { padding-top: 4.0em; padding-bottom: 4.0em }
-.py-9  { padding-top: 4.5em; padding-bottom: 4.5em }
-.py-10 { padding-top: 5.0em; padding-bottom: 5.0em }
-
 .px-1  { padding-left: 0.5em; padding-right: 0.5em }
 .px-2  { padding-left: 1.0em; padding-right: 1.0em }
 .px-3  { padding-left: 1.5em; padding-right: 1.5em }
@@ -314,23 +582,108 @@ This carousel is only 3 columns wide on desktop.
 .px-9  { padding-left: 4.5em; padding-right: 4.5em }
 .px-10 { padding-left: 5.0em; padding-right: 5.0em }
 
+.py-1  { padding-top: 0.5em; padding-bottom: 0.5em }
+.py-2  { padding-top: 1.0em; padding-bottom: 1.0em }
+.py-3  { padding-top: 1.5em; padding-bottom: 1.5em }
+.py-4  { padding-top: 2.0em; padding-bottom: 2.0em }
+.py-5  { padding-top: 2.5em; padding-bottom: 2.5em }
+.py-6  { padding-top: 3.0em; padding-bottom: 3.0em }
+.py-7  { padding-top: 3.5em; padding-bottom: 3.5em }
+.py-8  { padding-top: 4.0em; padding-bottom: 4.0em }
+.py-9  { padding-top: 4.5em; padding-bottom: 4.5em }
+.py-10 { padding-top: 5.0em; padding-bottom: 5.0em }
 
-.mt-0em { margin-top: 0.0em; }
-.mt-1em { margin-top: 0.5em; }
-.mt-2em { margin-top: 1.0em; }
-.mt-3em { margin-top: 1.5em; }
-.mt-4em { margin-top: 2.0em; }
-.mt-5em { margin-top: 2.5em; }
-.mt-6em { margin-top: 3.0em; }
-.mt-7em { margin-top: 3.5em; }
-.mt-8em { margin-top: 4.0em; }
+.mt-0  { margin-top: 0.0em; }
+.mt-1  { margin-top: 0.5em; }
+.mt-2  { margin-top: 1.0em; }
+.mt-3  { margin-top: 1.5em; }
+.mt-4  { margin-top: 2.0em; }
+.mt-5  { margin-top: 2.5em; }
+.mt-6  { margin-top: 3.0em; }
+.mt-7  { margin-top: 3.5em; }
+.mt-8  { margin-top: 4.0em; }
+.mt-9  { margin-top: 4.5em; }
+.mt-10 { margin-top: 5.0em; }
 
-.mb-0em { margin-bottom: 0.0em; }
-.mb-1em { margin-bottom: 0.5em; }
-.mb-2em { margin-bottom: 1.0em; }
-.mb-3em { margin-bottom: 1.5em; }
-.mb-4em { margin-bottom: 2.0em; }
-.mb-5em { margin-bottom: 2.5em; }
-.mb-6em { margin-bottom: 3.0em; }
-.mb-7em { margin-bottom: 3.5em; }
-.mb-8em { margin-bottom: 4.0em; }
+.mb-0  { margin-bottom: 0.0em; }
+.mb-1  { margin-bottom: 0.5em; }
+.mb-2  { margin-bottom: 1.0em; }
+.mb-3  { margin-bottom: 1.5em; }
+.mb-4  { margin-bottom: 2.0em; }
+.mb-5  { margin-bottom: 2.5em; }
+.mb-6  { margin-bottom: 3.0em; }
+.mb-7  { margin-bottom: 3.5em; }
+.mb-8  { margin-bottom: 4.0em; }
+.mb-9  { margin-bottom: 4.5em; }
+.mb-10 { margin-bottom: 5.0em; }
+
+.mx-0  { margin-left: 0.0em; margin-right: 0.0em; }
+.mx-1  { margin-left: 0.5em; margin-right: 0.5em; }
+.mx-2  { margin-left: 1.0em; margin-right: 1.0em; }
+.mx-3  { margin-left: 1.5em; margin-right: 1.5em; }
+.mx-4  { margin-left: 2.0em; margin-right: 2.0em; }
+.mx-5  { margin-left: 2.5em; margin-right: 2.5em; }
+.mx-6  { margin-left: 3.0em; margin-right: 3.0em; }
+.mx-7  { margin-left: 3.5em; margin-right: 3.5em; }
+.mx-8  { margin-left: 4.0em; margin-right: 4.0em; }
+.mx-9  { margin-left: 4.5em; margin-right: 4.5em; }
+.mx-10 { margin-left: 5.0em; margin-right: 5.0em; }
+
+.my-0  { margin-top: 0.0em; margin-bottom: 0.0em; }
+.my-1  { margin-top: 0.5em; margin-bottom: 0.5em; }
+.my-2  { margin-top: 1.0em; margin-bottom: 1.0em; }
+.my-3  { margin-top: 1.5em; margin-bottom: 1.5em; }
+.my-4  { margin-top: 2.0em; margin-bottom: 2.0em; }
+.my-5  { margin-top: 2.5em; margin-bottom: 2.5em; }
+.my-6  { margin-top: 3.0em; margin-bottom: 3.0em; }
+.my-7  { margin-top: 3.5em; margin-bottom: 3.5em; }
+.my-8  { margin-top: 4.0em; margin-bottom: 4.0em; }
+.my-9  { margin-top: 4.5em; margin-bottom: 4.5em; }
+.my-10 { margin-top: 5.0em; margin-bottom: 5.0em; }
+
+.mx-auto { margin-left: auto; margin-right: auto;}
+
+
+/* Misc Utilities   
+–––––––––––––––––––––––––––––––––––––––––––––––––– 
+*/
+.disp-block { display: block; }
+.max-width-100 { max-width: 100%; }
+
+.max-60-wide { max-width: 60%; }
+.max-600px-wide { max-width: 600px; }
+.max-625px-wide { max-width: 625px; }
+
+section.bowed-shape-section:before {
+    content: "";
+
+    background-clip: border-box; 
+    background-color: transparent;
+    background-image: url('data:image/svg+xml;utf8,<svg xmlns="http://www.w3.org/2000/svg" preserveAspectRatio="none" viewBox="0 0 100 5"><path id="Path_5" data-name="Path 5" d="M0-20.123s25-5,50-5,50,5,50,5Z" transform="translate(0 25.123)"/></svg>');
+    background-origin: border-box;
+    background-position: bottom center;
+    background-repeat: no-repeat;
+    background-size: 100% 100%;
+
+    display: block;
+    height: calc(100vw * 0.07); /* keep it proportional to width */
+    left: 0;
+    position: absolute;
+    /* without -1px Safari has rounding errors and 
+       shows a thin white line on some screen widths */
+    bottom: calc(100% - 1px);
+    width: 100%;
+    z-index: -100;
+}
+
+
+/* Code Block
+–––––––––––––––––––––––––––––––––––––––––––––––––– 
+*/
+.code-block {
+    width: 525px;
+    height: 245px;
+    margin: 0 auto;
+    background-color: rgba(36,50,56,1.0);
+    border-radius: 5px;
+}
